Fixes to z-index in userpopup

--- a/branches/typchon_0.2.0/plugins/themes/climatecolab-theme/docroot/_diffs/css/style.css
+++ b/branches/typchon_0.2.0/plugins/themes/climatecolab-theme/docroot/_diffs/css/style.css
@@ -189,7 +189,7 @@ body {background:#fff; font-size:15px;}
 
 
 /* USER POP */
-.userpop {position:absolute; top:11px; left:752px; width:175px; z-index:11;}
+.userpop {position:absolute; top:11px; left:752px; width:175px; z-index:100;}
 .usertop {width:44px; height:34px; padding:8px 0 0 8px; margin-left:123px; background:url(../images/arrow-white_down.png) no-repeat 39px center #454544; -moz-border-radius-topleft:3px; -moz-border-radius-topright:3px; -webkit-border-top-left-radius:3px; -webkit-border-top-right-radius:3px; border-top-left-radius:3px; border-top-right-radius:3px;}
 .usertop img {border:1px solid #888b87;}
 .userbox {width:158px; padding:10px 0 18px 17px; background:url(../images/search-bg.png); font-size:14px; color:#d4d4d4; font-weight:700;
